--- a/pom.xml
+++ b/pom.xml
@@ -33,10 +33,14 @@
 
         <!-- timer projects -->
 
+
         <mybatis-spring-boot>1.2.0</mybatis-spring-boot>
+
         <mysql-connector>5.1.39</mysql-connector>
 
         <dubbo-spring-boot>1.0.0</dubbo-spring-boot>
+
+        <druid-connection-pool>1.1.6</druid-connection-pool>
     </properties>
 
     <!-- Spring Boot 启动父依赖 -->
