--- a/seckill-web-admin/src/main/resources/application.properties
+++ b/seckill-web-admin/src/main/resources/application.properties
@@ -4,6 +4,12 @@ server.port=6688
 #spring.mvc.view.prefix=/WEB-INF/views/
 spring.resources.static-locations=classpath:/static/
 
+## Dubbo 服务消费者配置
+##spring.dubbo.application.name不能相同
+spring.dubbo.application.name=seckill-web-admin
+spring.dubbo.registry.address=zookeeper://${dubbo.registry.address}
+spring.dubbo.scan=com.gw.seckill.web.admin.controller
+
 # FREEMARKER (FreeMarkerAutoConfiguration)
 spring.freemarker.allow-request-override=false
 spring.freemarker.allow-session-override=false
