--- a/seckill-web-boss/src/main/resources/application.properties
+++ b/seckill-web-boss/src/main/resources/application.properties
@@ -2,6 +2,6 @@
 server.port=6688
 
 ## Dubbo 服务消费者配置
-spring.dubbo.application.name=consumer
+spring.dubbo.application.name=seckill-web-boss
 spring.dubbo.registry.address=zookeeper://${dubbo.registry.address}
 spring.dubbo.scan=com.gw.seckill.web.boss.controller
