--- a/seckill-facade-admin/pom.xml
+++ b/seckill-facade-admin/pom.xml
@@ -10,5 +10,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>seckill-facade-admin</artifactId>
-
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-rest</artifactId>
+            <version>${spring-boot-starter}</version>
+        </dependency>
+    </dependencies>
 </project>
