--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,14 @@
         <druid-connection-pool>1.1.6</druid-connection-pool>
 
         <spring-boot-starter>1.5.1.RELEASE</spring-boot-starter>
+
+        <!--<spring-web>4.3.6.RELEASE</spring-web>-->
+
+        <slf4j-api>1.7.22</slf4j-api>
+
+        <slf4j-log4j12>1.7.25</slf4j-log4j12>
+
+        <shiro-version>1.3.2</shiro-version>
     </properties>
 
     <!-- Spring Boot 启动父依赖 -->
