--- a/seckill-common-web/pom.xml
+++ b/seckill-common-web/pom.xml
@@ -11,5 +11,32 @@
 
     <artifactId>seckill-common-web</artifactId>
 
+    <dependencies>
+        <!-- Spring Boot Web 依赖 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <!--slf4j api依赖-->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${slf4j-api}</version>
+        </dependency>
+        <!--log4j slf4j实现-->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>${slf4j-log4j12}</version>
+            <scope>test</scope>
+        </dependency>
+        <!--切面编程依赖-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+            <version>${spring-boot-starter}</version>
+        </dependency>
+
+    </dependencies>
 
 </project>
