--- a/seckill-common/pom.xml
+++ b/seckill-common/pom.xml
@@ -11,5 +11,13 @@
 
     <artifactId>seckill-common</artifactId>
 
+    <dependencies>
+        <!--fastjson-->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.44</version>
+        </dependency>
+    </dependencies>
 
 </project>
