--- a/seckill-facade-admin/pom.xml
+++ b/seckill-facade-admin/pom.xml
@@ -12,6 +12,11 @@
     <artifactId>seckill-facade-admin</artifactId>
     <dependencies>
         <dependency>
+            <groupId>com.gw.seckill</groupId>
+            <artifactId>seckill-common</artifactId>
+            <version>${seckill-common.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-rest</artifactId>
             <version>${spring-boot-starter}</version>
