--- a/seckill-service-admin/pom.xml
+++ b/seckill-service-admin/pom.xml
@@ -71,6 +71,12 @@
             <artifactId>druid</artifactId>
             <version>${druid-connection-pool}</version>
         </dependency>
+        <!--fastjson-->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.44</version>
+        </dependency>
 
         <!-- Junit -->
         <dependency>
