--- a/pom.xml
+++ b/pom.xml
@@ -72,7 +72,14 @@
         <module>seckill-web-admin</module>
     </modules>
 
-
+    <dependencies>
+        <!-- common -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.2.1</version>
+        </dependency>
+    </dependencies>
     <!--<build>
         <plugins>
             <plugin>
