--- a/seckill-web-admin/pom.xml
+++ b/seckill-web-admin/pom.xml
@@ -73,6 +73,11 @@
             <artifactId>shiro-spring</artifactId>
             <version>${shiro-version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-ehcache</artifactId>
+            <version>${shiro-version}</version>
+        </dependency>
         <!--guava依赖-->
         <dependency>
             <groupId>com.google.guava</groupId>
