--- a/seckill-web-admin/src/main/resources/application.properties
+++ b/seckill-web-admin/src/main/resources/application.properties
@@ -8,7 +8,10 @@ spring.resources.static-locations=classpath:/static/
 ##spring.dubbo.application.name不能相同
 spring.dubbo.application.name=seckill-web-admin
 spring.dubbo.registry.address=zookeeper://${dubbo.registry.address}
-spring.dubbo.scan=com.gw.seckill.web.admin.controller
+spring.dubbo.scan=com.gw.seckill.web.admin
+
+#LOG
+#logging.config=classpath:log4j2.xml
 
 # FREEMARKER (FreeMarkerAutoConfiguration)
 spring.freemarker.allow-request-override=false
