--- a/seckill-web-admin/pom.xml
+++ b/seckill-web-admin/pom.xml
@@ -84,6 +84,10 @@
             <artifactId>guava</artifactId>
             <version>19.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
         <!--单元测试依赖-->
         <dependency>
             <groupId>junit</groupId>
