--- a/seckill-common-web/pom.xml
+++ b/seckill-common-web/pom.xml
@@ -36,6 +36,12 @@
             <artifactId>spring-boot-starter-aop</artifactId>
             <version>${spring-boot-starter}</version>
         </dependency>
+        <!--Shiro依赖-->
+        <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-core</artifactId>
+            <version>${shiro-version}</version>
+        </dependency>
 
     </dependencies>
 
