--- a/seckill-service-admin/pom.xml
+++ b/seckill-service-admin/pom.xml
@@ -77,7 +77,12 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.44</version>
         </dependency>
-
+        <!--Shiro依赖-->
+        <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-core</artifactId>
+            <version>${shiro-version}</version>
+        </dependency>
         <!-- Junit -->
         <dependency>
             <groupId>junit</groupId>
