--- a/seckill-service-admin/src/main/resources/application.properties
+++ b/seckill-service-admin/src/main/resources/application.properties
@@ -34,3 +34,15 @@ spring.datasource.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowS
 mybatis.typeAliasesPackage=com.gw.seckill.facade.admin.entity
 ##mapper映射文件位置
 mybatis.mapperLocations=classpath:mapper/*.xml
+
+#mapper
+#mappers 多个接口时逗号隔开
+mapper.mappers=com.gw.seckill.core.admin.util.MenuUtil
+mapper.not-empty=false
+mapper.identity=MYSQL
+
+#pagehelper
+pagehelper.helperDialect=mysql
+pagehelper.reasonable=true
+pagehelper.supportMethodsArguments=true
+pagehelper.params=count=countSql
