--- a/seckill-web-admin/pom.xml
+++ b/seckill-web-admin/pom.xml
@@ -78,6 +78,11 @@
             <artifactId>shiro-ehcache</artifactId>
             <version>${shiro-version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-quartz</artifactId>
+            <version>${shiro-version}</version>
+        </dependency>
         <!--guava依赖-->
         <dependency>
             <groupId>com.google.guava</groupId>
@@ -98,5 +103,23 @@
     </dependencies>
     <build>
         <finalName>seckill-web-admin</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <jvmArguments>
+                        -Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5005
+                    </jvmArguments>
+                </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.springframework</groupId>
+                        <artifactId>springloaded</artifactId>
+                        <version>1.2.5.RELEASE</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
+        </plugins>
     </build>
 </project>
