Maven将springboot应用打成jar包的相关设置

--- a/pom.xml
+++ b/pom.xml
@@ -54,11 +54,11 @@
     </properties>
 
     <!-- Spring Boot 启动父依赖 -->
-    <parent>
+    <!--<parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>1.5.1.RELEASE</version>
-    </parent>
+    </parent>-->
     <modules>
         <module>seckill-common</module>
         <module>seckill-common-config</module>
