--- a/seckill-facade-mall/pom.xml
+++ b/seckill-facade-mall/pom.xml
@@ -11,4 +11,20 @@
 
     <artifactId>seckill-facade-mall</artifactId>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.1</version>
+                <!--${JAVA8_HOME}为maven的setting.xml中定义的-->
+                <configuration>
+                    <verbose>true</verbose>
+                    <fork>true</fork>
+                    <executable>${JAVA8_HOME}/bin/javac</executable>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
