--- a/seckill-common/pom.xml
+++ b/seckill-common/pom.xml
@@ -9,6 +9,9 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
+    <groupId>com.gw.seckill</groupId>
+    <packaging>jar</packaging>
+    <version>1.0-SNAPSHOT</version>
     <artifactId>seckill-common</artifactId>
 
     <dependencies>
@@ -19,5 +22,21 @@
             <version>1.2.44</version>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.1</version>
+                <!--${JAVA8_HOME}为maven的setting.xml中定义的-->
+                <configuration>
+                    <verbose>true</verbose>
+                    <fork>true</fork>
+                    <executable>${JAVA8_HOME}/bin/javac</executable>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
