--- a/seckill-service-admin/pom.xml
+++ b/seckill-service-admin/pom.xml
@@ -9,6 +9,9 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
+    <groupId>com.gw.seckill</groupId>
+    <packaging>jar</packaging>
+    <version>1.0-SNAPSHOT</version>
     <artifactId>seckill-service-admin</artifactId>
 
     <dependencies>
@@ -39,15 +42,17 @@
         </dependency>
 
         <!-- Spring Boot Web 依赖 -->
-       <!-- <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>-->
+       <dependency>
+           <groupId>org.springframework.boot</groupId>
+           <artifactId>spring-boot-starter-web</artifactId>
+            <version>${spring-boot-starter}</version>
+        </dependency>
 
         <!-- Spring Boot Test 依赖 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
+            <version>${spring-boot-starter}</version>
             <scope>test</scope>
         </dependency>
 
@@ -104,14 +109,28 @@
     </dependencies>
     <build>
         <plugins>
+            <!--SpringBoot Maven插件-->
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>1.5.1.RELEASE</version>
                 <configuration>
+                    <!--打Jar包设置:  SpringBoot入口类-->
+                    <mainClass>com.gw.seckill.AdminApplication</mainClass>
+                    <!--热加载设置参数-->
                     <jvmArguments>
                         -Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5005
                     </jvmArguments>
                 </configuration>
+
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <!--热加载依赖包-->
                 <dependencies>
                     <dependency>
                         <groupId>org.springframework</groupId>
@@ -120,6 +139,18 @@
                     </dependency>
                 </dependencies>
             </plugin>
+            <!--Maven编译插件-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.1</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                    <encoding>utf-8</encoding>
+                </configuration>
+            </plugin>
+
         </plugins>
     </build>
 </project>
