--- a/seckill-web-admin/pom.xml
+++ b/seckill-web-admin/pom.xml
@@ -7,7 +7,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>seckill-web-admin</artifactId>
-    <packaging>war</packaging>
+    <packaging>jar</packaging>
     <name>seckill-web-admin Maven Webapp</name>
     <url>http://maven.apache.org</url>
     <dependencies>
@@ -30,6 +30,13 @@
             <version>${seckill-common-web.version}</version>
         </dependency>
 
+        <!-- Spring Boot Web 依赖 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+            <version>${spring-boot-starter}</version>
+        </dependency>
+
         <!-- Spring Boot Dubbo 依赖 -->
         <dependency>
             <groupId>io.dubbo.springboot</groupId>
@@ -37,22 +44,18 @@
             <version>${dubbo-spring-boot}</version>
         </dependency>
 
-        <!-- Spring Boot Web 依赖 -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-
         <!-- Spring Boot Freemarker 依赖 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-freemarker</artifactId>
+            <version>${spring-boot-starter}</version>
         </dependency>
 
         <!-- Spring Boot Test 依赖 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
+            <version>${spring-boot-starter}</version>
             <scope>test</scope>
         </dependency>
         <!--Shiro依赖-->
@@ -92,6 +95,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-aop</artifactId>
+            <version>${spring-boot-starter}</version>
         </dependency>
         <!--单元测试依赖-->
         <dependency>
@@ -104,14 +108,28 @@
     <build>
         <finalName>seckill-web-admin</finalName>
         <plugins>
+            <!--SpringBoot Maven插件-->
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>1.5.1.RELEASE</version>
                 <configuration>
+                    <!--打Jar包设置:  SpringBoot入口类-->
+                    <mainClass>com.gw.seckill.web.admin.AdminWebApplication</mainClass>
+                    <!--热加载设置参数-->
                     <jvmArguments>
                         -Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5005
                     </jvmArguments>
                 </configuration>
+
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <!--热加载依赖包-->
                 <dependencies>
                     <dependency>
                         <groupId>org.springframework</groupId>
@@ -120,6 +138,18 @@
                     </dependency>
                 </dependencies>
             </plugin>
+            <!--Maven编译插件-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.1</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                    <encoding>utf-8</encoding>
+                </configuration>
+            </plugin>
+
         </plugins>
     </build>
 </project>
