--- a/seckill-common-core/pom.xml
+++ b/seckill-common-core/pom.xml
@@ -28,6 +28,18 @@
             <version>${mybatis-spring-boot}</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-commons</artifactId>
+            <version>1.13.0.RELEASE</version>
+        </dependency>
+
+        <!--tk.mybatis，定制自己的通用mapper-->
+        <dependency>
+            <groupId>tk.mybatis</groupId>
+            <artifactId>mapper-spring-boot-starter</artifactId>
+            <version>1.1.4</version>
+        </dependency>
     </dependencies>
 
     <build>
