--- a/seckill-facade-admin/pom.xml
+++ b/seckill-facade-admin/pom.xml
@@ -30,6 +30,12 @@
             <artifactId>persistence-api</artifactId>
             <version>1.0</version>
         </dependency>
+        <!--mybatis分页插件-->
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper</artifactId>
+            <version>5.1.1</version>
+        </dependency>
 
     </dependencies>
 
