--- a/seckill-web-admin/pom.xml
+++ b/seckill-web-admin/pom.xml
@@ -97,6 +97,12 @@
             <artifactId>spring-boot-starter-aop</artifactId>
             <version>${spring-boot-starter}</version>
         </dependency>
+        <!--mybatis分页插件-->
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper</artifactId>
+            <version>5.1.1</version>
+        </dependency>
         <!--单元测试依赖-->
         <dependency>
             <groupId>junit</groupId>
