文件上传配置

--- a/seckill-common-web/pom.xml
+++ b/seckill-common-web/pom.xml
@@ -46,6 +46,12 @@
             <artifactId>shiro-core</artifactId>
             <version>${shiro-version}</version>
         </dependency>
+        <!--fastdfs-->
+        <dependency>
+            <groupId>com.github.tobato</groupId>
+            <artifactId>fastdfs-client</artifactId>
+            <version>1.25.2-RELEASE</version>
+        </dependency>
 
     </dependencies>
 
