--- a/seckill-web-admin/src/main/resources/application.properties
+++ b/seckill-web-admin/src/main/resources/application.properties
@@ -31,3 +31,13 @@ spring.freemarker.settings.template_update_delay=0
 spring.freemarker.settings.default_encoding=UTF-8
 spring.freemarker.settings.classic_compatible=true
 spring.freemarker.order=1
+
+#fdfs
+fdfs.soTimeout=1500
+fdfs.connectTimeout=600
+fdfs.thumbImage.width=150
+fdfs.thumbImage.height=150
+fdfs.trackerList[0]=120.79.214.81:22122
+
+#½â¾öspringboot MXBean already registered
+spring.jmx.enabled=false
