--- a/seckill-web-boss/pom.xml
+++ b/seckill-web-boss/pom.xml
@@ -31,6 +31,13 @@
             <version>${dubbo-spring-boot}</version>
         </dependency>
 
+        <!-- Spring Boot Freemarker 依赖 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-freemarker</artifactId>
+            <version>${spring-boot-starter}</version>
+        </dependency>
+
         <!-- Spring Boot Web 依赖 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
