--- a/seckill-web-boss/src/main/resources/application.properties
+++ b/seckill-web-boss/src/main/resources/application.properties
@@ -1,7 +1,31 @@
 ## 避免和 server 工程端口冲突
-server.port=6688
+server.port=6689
+
+#MVC
+#spring.mvc.view.prefix=/WEB-INF/views/
+spring.resources.static-locations=classpath:/static/
 
 ## Dubbo 服务消费者配置
 spring.dubbo.application.name=seckill-web-boss
 spring.dubbo.registry.address=zookeeper://${dubbo.registry.address}
 spring.dubbo.scan=com.gw.seckill.web.boss.controller
+
+
+# FREEMARKER (FreeMarkerAutoConfiguration)
+spring.freemarker.allow-request-override=false
+spring.freemarker.allow-session-override=false
+spring.freemarker.cache=true
+spring.freemarker.charset=UTF-8
+spring.freemarker.check-template-location=true
+spring.freemarker.content-type=text/html
+spring.freemarker.enabled=true
+spring.freemarker.expose-request-attributes=false
+spring.freemarker.expose-session-attributes=false
+spring.freemarker.expose-spring-macro-helpers=true
+spring.freemarker.prefer-file-system-access=true
+spring.freemarker.suffix=.ftl
+spring.freemarker.template-loader-path=classpath:/templates/
+spring.freemarker.settings.template_update_delay=0
+spring.freemarker.settings.default_encoding=UTF-8
+spring.freemarker.settings.classic_compatible=true
+spring.freemarker.order=1
